# storage/api-docs/api-docs.json
@@ -129,6 +129,67 @@
                 }
             }
         },
+        "/api/users": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Get all users",
+                "operationId": "e61869cc7e44a6890208f0745e89a7a3",
+                "responses": {
+                    "200": {
+                        "description": "List of all users",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer"
+                                                    },
+                                                    "username": {
+                                                        "type": "string"
+                                                    },
+                                                    "email": {
+                                                        "type": "string"
+                                                    },
+                                                    "phone": {
+                                                        "type": "string"
+                                                    },
+                                                    "address": {
+                                                        "type": "string"
+                                                    },
+                                                    "role": {
+                                                        "type": "integer"
+                                                    },
+                                                    "created_at": {
+                                                        "type": "string",
+                                                        "format": "date-time"
+                                                    },
+                                                    "updated_at": {
+                                                        "type": "string",
+                                                        "format": "date-time"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/register": {
             "post": {
                 "tags": [
@@ -169,7 +230,7 @@
                                         "example": "secret123"
                                     },
                                     "phone": {
-                                        "type": "integer",
+                                        "type": "string",
                                         "example": 123456789
                                     },
                                     "address": {
@@ -204,7 +265,7 @@
                                                     "example": "hieptuan@example.com"
                                                 },
                                                 "phone": {
-                                                    "type": "integer",
+                                                    "type": "string",
                                                     "example": 123456789
                                                 },
                                                 "address": {
@@ -457,7 +518,7 @@
                                             "example": "failed"
                                         },
                                         "message": {
-                                            "type": "string",
+                                            "type": "integer",
                                             "example": "Invalid code"
                                         }
                                     },
@@ -568,6 +629,64 @@
                                 }
                             }
                         }
+                    }
+                }
+            }
+        },
+        "/api/order-history/{id}": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Get order history of authenticated user",
+                "operationId": "6dad29c4ae325d25fcdc4e940a1c6d5e",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Order history list",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "id_order": {
+                                                "type": "integer"
+                                            },
+                                            "order_date": {
+                                                "type": "string",
+                                                "format": "date-time"
+                                            },
+                                            "status": {
+                                                "type": "string"
+                                            },
+                                            "total": {
+                                                "type": "number"
+                                            },
+                                            "items": {
+                                                "type": "array",
+                                                "items": {
+                                                    "type": "object"
+                                                }
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
                     }
                 }
             }
